force-app/main/default/objects/Inventory__c/fields/Acc_Impairment_Infrastructure_Cost__c.field-meta.xml
<CustomField>
    <fullName>Acc_Impairment_Infrastructure_Cost__c</fullName>
    <label>Accumulat Impairment Infrastructure Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>