force-app/main/default/objects/Inventory__c/fields/Access_Date_AR__c.field-meta.xml
<CustomField>
    <fullName>Access_Date_AR__c</fullName>
    <label>Access Date AR</label>
    <type>Date</type>
</CustomField>