force-app/main/default/objects/Inventory__c/fields/Access_Status__c.field-meta.xml
<CustomField>
    <fullName>Access_Status__c</fullName>
    <label>Access Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Under Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>