force-app/main/default/objects/Inventory__c/fields/Account_Receivable__c.field-meta.xml
<CustomField>
    <fullName>Account_Receivable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Receivable</label>
    <referenceTo>AR_GL_Account__c</referenceTo>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>