force-app/main/default/objects/Inventory__c/fields/Active_Account__c.field-meta.xml
<CustomField>
    <fullName>Active_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Inventory2</relationshipName>
    <type>Lookup</type>
</CustomField>