force-app/main/default/objects/Inventory__c/fields/Active_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Active_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>