force-app/main/default/objects/Inventory__c/fields/Actual_Construction_Comm_Dt__c.field-meta.xml
<CustomField>
    <fullName>Actual_Construction_Comm_Dt__c</fullName>
    <label>Actual Construction Comm Dt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>