force-app/main/default/objects/Inventory__c/fields/Actual_DLD_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_DLD_Value__c</fullName>
    <label>Actual DLD Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>