force-app/main/default/objects/Inventory__c/fields/Actuals__c.field-meta.xml
<CustomField>
    <fullName>Actuals__c</fullName>
    <label>Actuals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>