force-app/main/default/objects/Inventory__c/fields/Additional_Features__c.field-meta.xml
<CustomField>
    <fullName>Additional_Features__c</fullName>
    <label>Additional Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Maid Room</fullName>
            </value>
            <value>
                <fullName>Study Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>