force-app/main/default/objects/Inventory__c/fields/Additional_GFA_sqm__c.field-meta.xml
<CustomField>
    <fullName>Additional_GFA_sqm__c</fullName>
    <label>Additional GFA (sqm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>