force-app/main/default/objects/Inventory__c/fields/Affected_Area_sqm__c.field-meta.xml
<CustomField>
    <fullName>Affected_Area_sqm__c</fullName>
    <label>Affected Area (sqm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>