force-app/main/default/objects/Inventory__c/fields/Agreement_Print_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Print_Date__c</fullName>
    <label>Agreement Print Date</label>
    <type>Date</type>
</CustomField>