force-app/main/default/objects/Inventory__c/fields/Allotted_Parking__c.field-meta.xml
<CustomField>
    <fullName>Allotted_Parking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allotted Parking</label>
    <type>Checkbox</type>
</CustomField>