force-app/main/default/objects/Inventory__c/fields/Anticipated_handover_date_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_handover_date_Arabic__c</fullName>
    <label>Anticipated handover date Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>