force-app/main/default/objects/Inventory__c/fields/Approval_Blocking_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Blocking_Status__c</fullName>
    <label>Approval Blocking Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted by Sales Director</fullName>
            </value>
            <value>
                <fullName>Submitted by Sales Con</fullName>
            </value>
            <value>
                <fullName>Approved by DOS</fullName>
            </value>
            <value>
                <fullName>Approved by HOS</fullName>
            </value>
            <value>
                <fullName>Approved by CCO</fullName>
            </value>
            <value>
                <fullName>Rejected by DOS</fullName>
            </value>
            <value>
                <fullName>Rejected by HOS</fullName>
            </value>
            <value>
                <fullName>Rejected by CCO</fullName>
            </value>
            <value>
                <fullName>Approved by CSO</fullName>
            </value>
            <value>
                <fullName>Rejected by CSO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>