force-app/main/default/objects/Inventory__c/fields/Approved_By_finance__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_finance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Chebox auto update based on Approval Process</description>
    <label>Approved By Finance</label>
    <type>Checkbox</type>
</CustomField>