force-app/main/default/objects/Inventory__c/fields/Approved_SOS_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_SOS_Date__c</fullName>
    <label>Approved SOS Date</label>
    <type>Date</type>
</CustomField>