force-app/main/default/objects/Inventory__c/fields/Arabic_Logo_Url__c.field-meta.xml
<CustomField>
    <fullName>Arabic_Logo_Url__c</fullName>
    <label>Arabic Logo Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>