force-app/main/default/objects/Inventory__c/fields/ARC_Exclude_From_Progression__c.field-meta.xml
<CustomField>
    <fullName>ARC_Exclude_From_Progression__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exclude inventory from being considered in the ARC progression.</description>
    <label>Exclude From Progression</label>
    <type>Checkbox</type>
</CustomField>