force-app/main/default/objects/Inventory__c/fields/Area_Date__c.field-meta.xml
<CustomField>
    <fullName>Area_Date__c</fullName>
    <label>Area Date</label>
    <type>Date</type>
</CustomField>