force-app/main/default/objects/Inventory__c/fields/ARR_Classification__c.field-meta.xml
<CustomField>
    <fullName>ARR_Classification__c</fullName>
    <description>Used for inventories classification on AR Financial reports.</description>
    <label>Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>