force-app/main/default/objects/Inventory__c/fields/ARR_Exclude_from_Report__c.field-meta.xml
<CustomField>
    <fullName>ARR_Exclude_from_Report__c</fullName>
    <label>Exclude from Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Collection</fullName>
            </value>
            <value>
                <fullName>Installment</fullName>
            </value>
            <value>
                <fullName>Both Sales and Installment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>