force-app/main/default/objects/Inventory__c/fields/ARR_Excluded__c.field-meta.xml
<CustomField>
    <fullName>ARR_Excluded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to exclude the inventories from AR Financial reports.</description>
    <label>Excluded</label>
    <type>Checkbox</type>
</CustomField>