force-app/main/default/objects/Inventory__c/fields/Assigned_Trips__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Trips__c</fullName>
    <label>Assigned Trips</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>