force-app/main/default/objects/Inventory__c/fields/Available_for_Sales_Offer_Till__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Sales_Offer_Till__c</fullName>
    <label>Available for Sales Offer Till</label>
    <type>DateTime</type>
</CustomField>