force-app/main/default/objects/Inventory__c/fields/Balcony_Area_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Area_Sqft__c</fullName>
    <label>Balcony Area (Sqft)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>