force-app/main/default/objects/Inventory__c/fields/Balcony_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Area_Sqm__c</fullName>
    <label>Balcony Area (Sqm)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>