force-app/main/default/objects/Inventory__c/fields/Bank_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_No__c</fullName>
    <label>Bank Account No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>