force-app/main/default/objects/Inventory__c/fields/BANK_BRANCH__c.field-meta.xml
<CustomField>
    <fullName>BANK_BRANCH__c</fullName>
    <label>Bank Branch</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>