force-app/main/default/objects/Inventory__c/fields/Bank_Country__c.field-meta.xml
<CustomField>
    <fullName>Bank_Country__c</fullName>
    <label>Bank Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>United Arab Emirates</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Saudi Arabia</fullName>
            </value>
            <value>
                <fullName>Pakistan</fullName>
            </value>
            <value>
                <fullName>Jordan</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>Egypt</fullName>
            </value>
            <value>
                <fullName>Syrian Arab Republic</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Lebanon</fullName>
            </value>
            <value>
                <fullName>Sudan</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>Kuwait</fullName>
            </value>
            <value>
                <fullName>Iran, Islamic Republic of</fullName>
            </value>
            <value>
                <fullName>Iraq</fullName>
            </value>
            <value>
                <fullName>Afghanistan</fullName>
            </value>
            <value>
                <fullName>Aland Islands</fullName>
            </value>
            <value>
                <fullName>Albania</fullName>
            </value>
            <value>
                <fullName>Algeria</fullName>
            </value>
            <value>
                <fullName>Andorra</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Anguilla</fullName>
            </value>
            <value>
                <fullName>Antarctica</fullName>
            </value>
            <value>
                <fullName>Antigua and Barbuda</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Armenia</fullName>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>