force-app/main/default/objects/Inventory__c/fields/BANK_IBAN__c.field-meta.xml
<CustomField>
    <fullName>BANK_IBAN__c</fullName>
    <label>Bank IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>