force-app/main/default/objects/Inventory__c/fields/BANK_NAME__c.field-meta.xml
<CustomField>
    <fullName>BANK_NAME__c</fullName>
    <label>Bank Name</label>
    <type>TextArea</type>
</CustomField>