force-app/main/default/objects/Inventory__c/fields/BANK_SWIFT_CODE__c.field-meta.xml
<CustomField>
    <fullName>BANK_SWIFT_CODE__c</fullName>
    <label>Bank Swift Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>