force-app/main/default/objects/Inventory__c/fields/Bank_Transfer_Payments__c.field-meta.xml
<CustomField>
    <fullName>Bank_Transfer_Payments__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bank Transfer Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>