force-app/main/default/objects/Inventory__c/fields/BE_Parking_Count__c.field-meta.xml
<CustomField>
    <fullName>BE_Parking_Count__c</fullName>
    <label># of Parking Floors (BackEnd)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>