force-app/main/default/objects/Inventory__c/fields/Beach__c.field-meta.xml
<CustomField>
    <fullName>Beach__c</fullName>
    <description>Property Attribute: Indicate access to a beach</description>
    <label>Beach</label>
    <length>100</length>
    <type>Text</type>
</CustomField>