force-app/main/default/objects/Inventory__c/fields/BedRoom__c.field-meta.xml
<CustomField>
    <fullName>BedRoom__c</fullName>
    <label>BedRoom</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>