force-app/main/default/objects/Inventory__c/fields/Blocked_by__c.field-meta.xml
<CustomField>
    <fullName>Blocked_by__c</fullName>
    <label>Blocked by Old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>