force-app/main/default/objects/Inventory__c/fields/Blocked_by_User__c.field-meta.xml
<CustomField>
    <fullName>Blocked_by_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blocked by User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>