force-app/main/default/objects/Inventory__c/fields/Blocked_till__c.field-meta.xml
<CustomField>
    <fullName>Blocked_till__c</fullName>
    <label>SC Blocked till</label>
    <type>Date</type>
</CustomField>