force-app/main/default/objects/Inventory__c/fields/Blocked_Till_Under_Approval__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Till_Under_Approval__c</fullName>
    <label>Blocked Till Under Approval</label>
    <type>Date</type>
</CustomField>