force-app/main/default/objects/Inventory__c/fields/Blocked_User__c.field-meta.xml
<CustomField>
    <fullName>Blocked_User__c</fullName>
    <label>Blocked User</label>
    <type>TextArea</type>
</CustomField>