force-app/main/default/objects/Inventory__c/fields/Blocking_Blocked_till__c.field-meta.xml
<CustomField>
    <fullName>Blocking_Blocked_till__c</fullName>
    <label>Blocked till</label>
    <type>Date</type>
</CustomField>