force-app/main/default/objects/Inventory__c/fields/Blocking_Comments__c.field-meta.xml
<CustomField>
    <fullName>Blocking_Comments__c</fullName>
    <label>SC Blocking Comments</label>
    <type>TextArea</type>
</CustomField>