force-app/main/default/objects/Inventory__c/fields/Blocking_Days_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocking_Days_Blocked__c</fullName>
    <label>Days Blocked</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>