force-app/main/default/objects/Inventory__c/fields/Blocking_Manager_of_Blocked_User__c.field-meta.xml
<CustomField>
    <fullName>Blocking_Manager_of_Blocked_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager of Blocked User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventory5</relationshipName>
    <type>Lookup</type>
</CustomField>