force-app/main/default/objects/Inventory__c/fields/Blocking_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Blocking_Remarks__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>