force-app/main/default/objects/Inventory__c/fields/Blocking_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>Blocking_Submitter_Email__c</fullName>
    <label>Submitter Email</label>
    <type>Email</type>
</CustomField>