force-app/main/default/objects/Inventory__c/fields/Blocking_Type__c.field-meta.xml
<CustomField>
    <fullName>Blocking_Type__c</fullName>
    <label>Blocking Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Business_Development</fullName>
                <label>Business Development</label>
            </value>
            <value>
                <fullName>Sales Ops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>