force-app/main/default/objects/Inventory__c/fields/BookingUnitAssociated__c.field-meta.xml
<CustomField>
    <fullName>BookingUnitAssociated__c</fullName>
    <label>BookingUnitAssociated</label>
    <length>20</length>
    <type>Text</type>
</CustomField>