force-app/main/default/objects/Inventory__c/fields/Brochure_Plan_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Plan_Arabic__c</fullName>
    <label>Brochure Plan Arabic</label>
    <type>Url</type>
</CustomField>