force-app/main/default/objects/Inventory__c/fields/Brochure_Plan_English__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Plan_English__c</fullName>
    <label>Brochure Plan English</label>
    <type>Url</type>
</CustomField>