force-app/main/default/objects/Inventory__c/fields/Brochure_Plan_Russian__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Plan_Russian__c</fullName>
    <label>Brochure Plan in Russian</label>
    <type>Url</type>
</CustomField>