force-app/main/default/objects/Inventory__c/fields/Broker_Self_Invoice_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Broker_Self_Invoice_Bill_To__c</fullName>
    <label>Broker Self Invoice Bill To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>