force-app/main/default/objects/Inventory__c/fields/BTS_GROSS_AREA_SQFT__c.field-meta.xml
<CustomField>
    <fullName>BTS_GROSS_AREA_SQFT__c</fullName>
    <label>Gross Area (Sqft)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>