force-app/main/default/objects/Inventory__c/fields/BTS_MASTER_DEVELOPER_NAME__c.field-meta.xml
<CustomField>
    <fullName>BTS_MASTER_DEVELOPER_NAME__c</fullName>
    <label>Master Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>