force-app/main/default/objects/Inventory__c/fields/BTS_MASTER_DEVELOPER_PO_BOX__c.field-meta.xml
<CustomField>
    <fullName>BTS_MASTER_DEVELOPER_PO_BOX__c</fullName>
    <label>Developer P O Box</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>