force-app/main/default/objects/Inventory__c/fields/BTS_PLAN_TYPE__c.field-meta.xml
<CustomField>
    <fullName>BTS_PLAN_TYPE__c</fullName>
    <label>Plan Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>