force-app/main/default/objects/Inventory__c/fields/BTS_TENURE__c.field-meta.xml
<CustomField>
    <fullName>BTS_TENURE__c</fullName>
    <label>Tenure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>