force-app/main/default/objects/Inventory__c/fields/BTSPlot_No__c.field-meta.xml
<CustomField>
    <fullName>BTSPlot_No__c</fullName>
    <description>This field used to store BTS Units plot number only for town houses and villas</description>
    <label>Plot No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>