force-app/main/default/objects/Inventory__c/fields/BTSPlot_No_Ar__c.field-meta.xml
<CustomField>
    <fullName>BTSPlot_No_Ar__c</fullName>
    <label>Plot No Ar</label>
    <length>50</length>
    <type>Text</type>
</CustomField>