force-app/main/default/objects/Inventory__c/fields/BU_Price__c.field-meta.xml
<CustomField>
    <fullName>BU_Price__c</fullName>
    <label>Inventory Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>