force-app/main/default/objects/Inventory__c/fields/Building_Height__c.field-meta.xml
<CustomField>
    <fullName>Building_Height__c</fullName>
    <label>Building Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>