force-app/main/default/objects/Inventory__c/fields/Built_up_area_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Built_up_area_Sqft__c</fullName>
    <label>Built up area (Sqft)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>