force-app/main/default/objects/Inventory__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MCCL: Meraas Canal Community</fullName>
            </value>
            <value>
                <fullName>MDL: Meraas Development</fullName>
            </value>
            <value>
                <fullName>CWR: CityWalk Residential 1</fullName>
            </value>
            <value>
                <fullName>BWR: Blue Waters Residential</fullName>
            </value>
            <value>
                <fullName>MBNR: Meraas Bay and Residence</fullName>
            </value>
            <value>
                <fullName>PJHR: PJ Hotel Residential</fullName>
            </value>
            <value>
                <fullName>JBAYR: Jumeira Bay Residential</fullName>
            </value>
            <value>
                <fullName>PDLM: PDLM Residential</fullName>
            </value>
            <value>
                <fullName>LMNR: La Mer North Residential</fullName>
            </value>
            <value>
                <fullName>LMBR: La Mer Branded Residence</fullName>
            </value>
            <value>
                <fullName>MDN: MDN Real Estate</fullName>
            </value>
            <value>
                <fullName>RR: Remraam</fullName>
            </value>
            <value>
                <fullName>MEL: Meraas Estates</fullName>
            </value>
            <value>
                <fullName>1JBR: The One JBR</fullName>
            </value>
            <value>
                <fullName>ASIA: Asia Asia</fullName>
            </value>
            <value>
                <fullName>BB: Business Bay</fullName>
            </value>
            <value>
                <fullName>BWL: Blue Waters</fullName>
            </value>
            <value>
                <fullName>CD: Creekfront Development</fullName>
            </value>
            <value>
                <fullName>CDP: Central Dubai Projects</fullName>
            </value>
            <value>
                <fullName>DHRE2BTS: DHRE 2 BTS</fullName>
            </value>
            <value>
                <fullName>DL: Dubai Land</fullName>
            </value>
            <value>
                <fullName>DLR: Dubai Land Residences</fullName>
            </value>
            <value>
                <fullName>DP: Dubai Properties</fullName>
            </value>
            <value>
                <fullName>DPLB: DPG Landbank</fullName>
            </value>
            <value>
                <fullName>DW: Dubai Wharf</fullName>
            </value>
            <value>
                <fullName>ER: Estithmaar Realty FZ</fullName>
            </value>
            <value>
                <fullName>GVL: Global Village</fullName>
            </value>
            <value>
                <fullName>JAH: J A Hills</fullName>
            </value>
            <value>
                <fullName>JBL: Jumeira Bay</fullName>
            </value>
            <value>
                <fullName>JCDM: Jumeirah Central Development Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>