force-app/main/default/objects/Inventory__c/fields/CampaignAssociation_Recent__c.field-meta.xml
<CustomField>
    <fullName>CampaignAssociation_Recent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CampaignAssociation Recent</label>
    <type>Checkbox</type>
</CustomField>