force-app/main/default/objects/Inventory__c/fields/CampAssociatedDT__c.field-meta.xml
<CustomField>
    <fullName>CampAssociatedDT__c</fullName>
    <label>CampAssociatedDT</label>
    <type>DateTime</type>
</CustomField>