force-app/main/default/objects/Inventory__c/fields/Capped_Sewage_Generation_M3_day_Ar__c.field-meta.xml
<CustomField>
    <fullName>Capped_Sewage_Generation_M3_day_Ar__c</fullName>
    <label>Capped Sewage Generation M3 day Ar</label>
    <length>20</length>
    <type>Text</type>
</CustomField>