force-app/main/default/objects/Inventory__c/fields/Capped_Water_Demand_M3_day__c.field-meta.xml
<CustomField>
    <fullName>Capped_Water_Demand_M3_day__c</fullName>
    <label>Capped Water Demand (M3/day)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>