force-app/main/default/objects/Inventory__c/fields/Capped_Water_Demand_M3_day_Ar__c.field-meta.xml
<CustomField>
    <fullName>Capped_Water_Demand_M3_day_Ar__c</fullName>
    <label>Capped Water Demand M3 day Ar</label>
    <length>20</length>
    <type>Text</type>
</CustomField>