force-app/main/default/objects/Inventory__c/fields/CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>CATEGORY__c</fullName>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>